testsuite/tests/properties/invalid_dflt_arg_val/bad_expr.lkt
import common

class Example: FooNode {
    @export fun p(a: Bool=Bool): Bool = a
}
